# eye_project

./: .gitignore  README.md  app.py  asr_service.py  audio_utils.py  configs.py  diarization_service.py  encryption_util.py  face_service.py  keyframe_detector.py  kws_service.py  log.txt  my_project_cpp.cp311-win_amd64.pyd  requirements.txt
cpp_src/: CMakeLists.txt  audio_utils.cpp  audio_utils.h  keyframe_detector.cpp  keyframe_detector.h  main.cpp
db/: historical_speakers.pt
db/face_database/: metadata.jsonl
db/face_database/features/: person_001.npy  person_002.npy
kws_models/: xiaotong_zh_linux_v3_0_0.ppn
modules/: __init__.py  android_commands.py  audio_processing_logic.py  client_actions.py  event_recorder.py  general_utils.py  gui_callbacks.py  latency_logger.py  llm_service.py  management_callbacks.py  performance_utils.py  service_management.py  state_manager.py  video_processing_logic.py  websocket_callbacks.py
templates/: control_panel.html  management_panel.html
